// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTitle renders correctly with only title 1`] = `
<div>
  <div
    class="text-center"
  >
    <h2
      class="text-2xl font-bold text-gray-800"
    >
      Imagine
    </h2>
    <p
      class="text-lg text-gray-600"
    />
  </div>
</div>
`;

exports[`SongTitle renders correctly with title and artist 1`] = `
<div>
  <div
    class="text-center"
  >
    <h2
      class="text-2xl font-bold text-gray-800"
    >
      Bohemian Rhapsody
    </h2>
    <p
      class="text-lg text-gray-600"
    >
      Queen
    </p>
  </div>
</div>
`;
